motivus-home/k8s/03-home-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: home-deployment
  name: home
  namespace: home
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: home
  type: NodePort
